--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,21 @@
 os: osx
 language: Swift
 osx_image: xcode10.3
-script:
-  xcodebuild clean test -scheme the_artist_ios -project the_artist_ios.xcodeproj  -destination "platform=iOS Simulator,name=iPhone X,OS=12.4" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO -quiet
+xcode_project: the_artist_ios.xcodeproj
+# xcode_workspace: <WORKSPACE_PLACEHOLDER>
+xcode_scheme: the_artist_ios
+xcode_sdk: iphonesimulator12.4
+env:
+  global:
+    - FRAMEWORK_NAME=SnapKit.framework
+    - FRAMEWORK_NAME=Alamofire.framework
+before_install:
+  - brew update
+  - brew outdated carthage || brew upgrade carthage
+before_script:
+  # bootstrap the dependencies for the project
+  # you can remove if you don't have dependencies
+  - carthage bootstrap
+before_deploy:
+  - carthage build --no-skip-current
+  - carthage archive $FRAMEWORK_NAME
